<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FM Radio</string>
    <string name="select_ch">Select Preset</string>
    <string name="frequency">Frequency</string>
    <string name="ch_name">Name</string>
    <string name="use_rds_name">Use RDS name</string>
    <string name="mhz">MHz</string>
    <string name="empty">Empty</string>
    <string name="save_preset">Save Preset</string>
    <string name="clear_presets">Clear Presets</string>
    <string name="scan">Scan</string>
    <string name="fmradio_save_canceled">Station scan was cancelled.</string>
    <!-- java.text.MessageFormat syntax. Android's plurals don't work for the zero case -->
    <string name="scan_result">{0,choice,0#No stations were|1#1 station was|1&lt;{0} stations were} found.</string>
    <string name="scan_progress">{0,choice,0#No stations found yet|1#Found 1 station|1&lt;Found {0} stations}\u2026</string>
    <string name="menu_speaker">Use loudspeaker</string>
    <string name="menu_headset">Use headset</string>
    <string name="menu_power_on">Enable FM radio</string>
    <string name="menu_power_off">Disable FM radio</string>
    <string name="btn_done">Done</string>
    <string name="preset">Preset</string>
    <string name="edit_preset_title">Edit preset %1$d</string>
    <string name="play_preset">Play Preset</string>
    <string name="edit_preset">Edit Preset</string>
    <string name="replace_preset">Replace Preset</string>
    <string name="clear_preset">Clear Preset</string>
    <string name="clear">Clear</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="all_presets">All Presets</string>
    <string name="fmradio_scanning_title">Scanning</string>
    <string name="fmradio_scan_confirm_msg">Do you want to automatically scan and save all available stations?</string>
    <string name="fmradio_clear_confirm_msg">Scanning for stations will remove all your currently saved stations. Would you like to continue the scan?</string>
    <string name="fmradio_no_headset">To use FM Radio, please plug in headset with round plug.</string>
    <string name="fmradio_airplane_mode_enabled">To use FM Radio, please turn off Airplane mode.</string>
    <string name="fmradio_waiting_for_power_on">FM Radio is being launched, please wait\u2026</string>
    <string name="error_start_scan">The scan was not able to start. Please try again.</string>
    <string name="service_start_error_title">FM Radio Service Start Failed</string>
    <string name="service_start_error_msg">FM Radio experienced a problem and will exit now. Try launching FM Radio again.</string>
    <string name="service_start_error_button">Quit</string>
    <string name="fm_pty_list_01">News</string>
    <string name="fm_pty_list_02">Current Affairs</string>
    <string name="fm_pty_list_03">Information</string>
    <string name="fm_pty_list_04">Sport</string>
    <string name="fm_pty_list_05">Education</string>
    <string name="fm_pty_list_06">Drama</string>
    <string name="fm_pty_list_07">Culture</string>
    <string name="fm_pty_list_08">Science</string>
    <string name="fm_pty_list_09">Varied</string>
    <string name="fm_pty_list_10">Pop Music</string>
    <string name="fm_pty_list_11">Rock Music</string>
    <string name="fm_pty_list_12">M.O.R. Music</string>
    <string name="fm_pty_list_13">Light classical</string>
    <string name="fm_pty_list_14">Serious classical</string>
    <string name="fm_pty_list_15">Other Music</string>
    <string name="fm_pty_list_16">Weather</string>
    <string name="fm_pty_list_17">Finance</string>
    <string name="fm_pty_list_18">"Children's programs"</string>
    <string name="fm_pty_list_19">Social Affairs</string>
    <string name="fm_pty_list_20">Religion</string>
    <string name="fm_pty_list_21">Phone In</string>
    <string name="fm_pty_list_22">Travel</string>
    <string name="fm_pty_list_23">Leisure</string>
    <string name="fm_pty_list_24">Jazz Music</string>
    <string name="fm_pty_list_25">Country Music</string>
    <string name="fm_pty_list_26">National Music</string>
    <string name="fm_pty_list_27">Oldies Music</string>
    <string name="fm_pty_list_28">Folk Music</string>
    <string name="fm_pty_list_29">Documentary</string>
    <string name="fm_pty_list_30">Alarm Test</string>
    <string name="fm_pty_list_31">Alarm</string>
    <string name="fm_pty_list_33">News</string>
    <string name="fm_pty_list_34">Information</string>
    <string name="fm_pty_list_35">Sports</string>
    <string name="fm_pty_list_36">Talk</string>
    <string name="fm_pty_list_37">Rock</string>
    <string name="fm_pty_list_38">Classic Rock</string>
    <string name="fm_pty_list_39">Adult Hits</string>
    <string name="fm_pty_list_40">Soft Rock</string>
    <string name="fm_pty_list_41">Top 40</string>
    <string name="fm_pty_list_42">Country</string>
    <string name="fm_pty_list_43">Oldies</string>
    <string name="fm_pty_list_44">Soft</string>
    <string name="fm_pty_list_45">Nostalgia</string>
    <string name="fm_pty_list_46">Jazz</string>
    <string name="fm_pty_list_47">Classical</string>
    <string name="fm_pty_list_48">Rhythm and Blues</string>
    <string name="fm_pty_list_49">Soft Rhythm and Blues</string>
    <string name="fm_pty_list_50">Language</string>
    <string name="fm_pty_list_51">Religious Music</string>
    <string name="fm_pty_list_52">Religious Talk</string>
    <string name="fm_pty_list_53">Personality</string>
    <string name="fm_pty_list_54">Public</string>
    <string name="fm_pty_list_55">College</string>
    <string name="fm_pty_list_56">Unassigned</string>
    <string name="fm_pty_list_57">Unassigned</string>
    <string name="fm_pty_list_58">Unassigned</string>
    <string name="fm_pty_list_59">Unassigned</string>
    <string name="fm_pty_list_60">Unassigned</string>
    <string name="fm_pty_list_61">Weather</string>
    <string name="fm_pty_list_62">Emergency Test</string>
    <string name="fm_pty_list_63">Emergency</string>

    <string name="settings_title">Settings</string>
    <string name="general_settings_title">General</string>
    <string name="ignore_airplane_title">Ignore airplane mode</string>
    <string name="ignore_airplane_summary">Allow operation of FM Radio even if airplane mode is enabled</string>
    <string name="ignore_no_headset_title">Ignore no headset</string>
    <string name="ignore_no_headset_summary">Allow using the FM Radio if no headset is connected. Reception quality will be degraded</string>
    <string name="tuning_settings_title">Tuning</string>
    <string name="seek_sensitivity_title">Seek sensitivity</string>
    <string name="seek_sensitivity_summary">Fine-tune the required signal level of the stations when seeking</string>
    <string name="seek_sensitivity_entry_verystrong">Very strong</string>
    <string name="seek_sensitivity_entry_strong">Strong</string>
    <string name="seek_sensitivity_entry_medium">Medium</string>
    <string name="seek_sensitivity_entry_weak">Weak</string>
    <string name="seek_sensitivity_entry_veryweak">Very weak</string>
    <string name="button_settings_title">Button behaviour</string>
    <string name="media_button_title">Media buttons</string>
    <string name="media_button_summary">Select the behaviour of the previous/next media buttons</string>
    <string name="media_button_entry_presets">Switch between presets</string>
    <string name="media_button_entry_seek">Seek stations</string>
    <string name="notice">Notice</string>
    <string name="warning">Warning</string>
    <string name="no_headset_ignore_message">As the headset is used as FM antenna, the reception quality will be significantly degraded if the headset is disconnected.</string>
    <string name="airplane_ignore_warning_message">The FM Radio uses the Bluetooth hardware internally, which may be illegal to use under some conditions, e.g. on a plane.\nDo you really want to enable FM Radio operation in airplane mode?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="interface_settings_title">Interface</string>
    <string name="hide_actionbar_summary">Hides the Android Action Bar in main window</string>
    <string name="hide_actionbar_title">Hide Action Bar</string>
    <string name="untitled">Untitled</string>
    <string name="backup_restore_title">Backup &amp; Restore</string>
    <string name="backup_presets_title">Backup presets</string>
    <string name="backup_presets_summary">Backup the current list of presets to the SD card</string>
    <string name="backup_presets_dialog_message">Please enter a name for the preset backup.</string>
    <string name="backup_presets_success_toast">Preset list backed up successfully.</string>
    <string name="backup_presets_failure_toast">Backing up the preset list failed.</string>
    <string name="restore_presets_title">Restore presets</string>
    <string name="restore_presets_summary">Replace the preset list with a previously backed up one</string>
    <string name="restore_presets_success_toast">The preset backup with %1$d presets was restored successfully.</string>
    <string name="restore_presets_failure_toast">Restoring the preset list from the backup failed.</string>
    <string name="select_backup">Select backup</string>
</resources>
